Create infrastructure for actual navigation

--- a/package.json
+++ b/package.json
@@ -2,16 +2,27 @@
   "name": "collect",
   "version": "0.1.0",
   "private": true,
+    "homepage": "https://rzaracota.github.io/collect-app",
+    "repo": "https://github.com/rzaracota/collect-app",
   "dependencies": {
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.10"
   },
+    "config": {
+	"repo": "https://github.com/rzaracota/collect-app"
+    },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+      "eject": "react-scripts eject",
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d build -b master -r https://github.com/rzaracota/collect-app -o github"
+  },
+  "devDependencies": {
+      "gh-pages": "^1.0.0",
+    "github-pages": "^3.0.2"
   }
 }
